--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "next": "14.2.5",
+    "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8",
